--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,7 @@
     "ghcr.io/devcontainers/features/github-cli:1": {}
   },
 
-  "postCreateCommand": "python3 -m ensurepip --upgrade && python3 -m pip install --upgrade pip && python3 -m pip install -r requirements.txt",
+  "postCreateCommand": "python3 -m venv venv && venv/bin/pip install --upgrade pip && venv/bin/pip install -r requirements.txt",
 
   "forwardPorts": [8888],
 
